tests/reference/asr_preprocess-unterminated_ifdef_01-f746dbf.stderr
C preprocessor error: Unterminated #ifndef
 --> tests/errors/unterminated_ifdef_01.f90:7:1
  |
7 | 
  | ^ 
